tests/type_alias_param_variance/type_alias_param_variance.exp
Error ----------------------------------------------------------------------------------------------------- test.js:5:20

Cannot use `T` [1] in an input/output position because `T` [1] is expected to occur only in input positions.
[incompatible-variance]

   test.js:5:20
   5| type A<in T> = Foo<T>; // Error, Foo expects invariant type
                         ^

References:
   test.js:5:11
   5| type A<in T> = Foo<T>; // Error, Foo expects invariant type
                ^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:6:21

Cannot use `T` [1] in an input/output position because `T` [1] is expected to occur only in output positions.
[incompatible-variance]

   test.js:6:21
   6| type B<out T> = Foo<T>; // Error, Foo expects invariant type
                          ^

References:
   test.js:6:12
   6| type B<out T> = Foo<T>; // Error, Foo expects invariant type
                 ^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:8:20

Cannot use `T` [1] in an output position because `T` [1] is expected to occur only in input positions.
[incompatible-variance]

   test.js:8:20
   8| type D<in T> = Bar<T>; // Error, Bar expects covariant type
                         ^

References:
   test.js:8:11
   8| type D<in T> = Bar<T>; // Error, Bar expects covariant type
                ^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:13:21

Cannot use `T` [1] in an input position because `T` [1] is expected to occur only in output positions.
[incompatible-variance]

   test.js:13:21
   13| type I<out T> = Baz<T>; // Error, Baz expects contravariant type
                           ^

References:
   test.js:13:12
   13| type I<out T> = Baz<T>; // Error, Baz expects contravariant type
                  ^ [1]


Error --------------------------------------------------------------------------------------------- test_keyword.js:5:20

Cannot use `T` [1] in an input/output position because `T` [1] is expected to occur only in input positions.
[incompatible-variance]

   test_keyword.js:5:20
   5| type A<in T> = Foo<T>; // Error, Foo expects invariant type
                         ^

References:
   test_keyword.js:5:11
   5| type A<in T> = Foo<T>; // Error, Foo expects invariant type
                ^ [1]


Error --------------------------------------------------------------------------------------------- test_keyword.js:6:21

Cannot use `T` [1] in an input/output position because `T` [1] is expected to occur only in output positions.
[incompatible-variance]

   test_keyword.js:6:21
   6| type B<out T> = Foo<T>; // Error, Foo expects invariant type
                          ^

References:
   test_keyword.js:6:12
   6| type B<out T> = Foo<T>; // Error, Foo expects invariant type
                 ^ [1]


Error --------------------------------------------------------------------------------------------- test_keyword.js:8:20

Cannot use `T` [1] in an output position because `T` [1] is expected to occur only in input positions.
[incompatible-variance]

   test_keyword.js:8:20
   8| type D<in T> = Bar<T>; // Error, Bar expects covariant type
                         ^

References:
   test_keyword.js:8:11
   8| type D<in T> = Bar<T>; // Error, Bar expects covariant type
                ^ [1]


Error -------------------------------------------------------------------------------------------- test_keyword.js:13:21

Cannot use `T` [1] in an input position because `T` [1] is expected to occur only in output positions.
[incompatible-variance]

   test_keyword.js:13:21
   13| type I<out T> = Baz<T>; // Error, Baz expects contravariant type
                           ^

References:
   test_keyword.js:13:12
   13| type I<out T> = Baz<T>; // Error, Baz expects contravariant type
                  ^ [1]



Found 8 errors
